<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Show 2,4,6 or 8 guess buttons</string>
    <string name="regions">Regions</string>
    <string name="regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="incorrect">Incorrect!</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_descriptin">Image of current flag</string>
    <string name="default_region" translatable="false">North America</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="results">%1$d answers ,%2$.02f%% correct</string>
    <string name="pref_africa">Africa</string>
    <string name="pref_asia">Asia</string>
    <string name="pref_Europe">Europe</string>
    <string name="pref_north_america">North America</string>
    <string name="pref_oceania">Oceania</string>
    <string name="pref_south_america">South America</string>
</resources>
